--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    Hello!
+    <form id="city-search">
+      <input
+        class="search"
+        type="text"
+        placeholder="Search by city name here"
+        id="city-input"
+      />
+      <input class="search" type="submit" value="Search" />
+      <button id="search-current-location">Search current location</button>
+    </form>
+    <h2 id="current-date">Sunday, February 6</h2>
+    <h2 id="city-name">Boston</h2>
+    <h3 class="current-weather" id="current-weather">20°</h3>
+
+    <div class="row hourly">
+      <div class="col">
+        9AM <br />
+        18° ☀️
+      </div>
+      <div class="col">
+        12PM <br />
+        20° ☀️
+      </div>
+      <div class="col">
+        3PM <br />
+        24° ☀️
+      </div>
+      <div class="col">
+        6PM <br />
+        19° ☀️
+      </div>
+    </div>
+    <h2>Five Day Forecast</h2>
+    <div class="row forecast">
+      <div class="col">
+        <div class="weekday">Monday</div>
+        <div class="degree">33°</div>
+        <div class="emoji">☀️</div>
+      </div>
+      <div class="col">
+        <div class="weekday">Tuesday</div>
+        <div class="degree">28°</div>
+        <div class="emoji">🌤</div>
+      </div>
+      <div class="col">
+        <div class="weekday">Wednesday</div>
+        <div class="degree">32°</div>
+        <div class="emoji">🌨</div>
+      </div>
+      <div class="col">
+        <div class="weekday">Thursday</div>
+        <div class="degree">31°</div>
+        <div class="emoji">🌨</div>
+      </div>
+      <div class="col">
+        <div class="weekday">Friday</div>
+        <div class="degree">37°</div>
+        <div class="emoji">🌤</div>
+      </div>
+    </div>
+    <script src="src/script.js"></script>
   </body>
 </html>
