Added "open source code" link to bottom

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         <div class="emoji">🌤</div>
       </div>
     </div>
+    <a href="https://github.com/sarahkatedc/SK-plus-project"
+      >Open source code</a
+    >
+    by: Sarah Kate Davidson-Catalano
     <script src="src/script.js"></script>
   </body>
 </html>
